--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <div id="content">
         <h2 class="Headings">The defer attribute in HTML script tags</h2>
         <img src='logoMarkv2.png'/>
-        <script defer src="https://github.com/AbdulMuizzk/textfiles/blob/master/long.js"></script>
-        <script defer src="https://github.com/AbdulMuizzk/textfiles/blob/master/small.js"></script>
+        <script defer src="long.js"></script>
+        <script defer src="small.js"></script>
         <h3 class="Headings">Welcome to Educative Answers!</h3>
     </div>
 </body>
